# The_core

./: .gitignore  INSTALL.md  README.md  admin.py  constants.py  permissions.py  pyproject.toml  requirements.txt  urls.py
aa_core_hub/: __init__.py  admin.py  api.py  apps.py  constants.py  signals.py  tasks.py  type_defaults.py
aa_core_hub/management/commands/: fetch_geography.py  fetch_sov.py
aa_core_hub/migrations/: 0002_celestial_cache.py  0003_rename_aa_core_hu_type_n_idx_aa_core_hub_type_na_72d917_idx_and_more.py  0004_dscan_timeline_api.py  0005_geography_cache.py  0006_sov_cache_structure_categories.py  0007_dscan_public_id.py  0008_structure_fit_notes.py
aa_core_hub/models/: __init__.py  celestials.py  dscan.py  geography.py  intel.py  sov.py  structures.py  timers.py
aa_core_hub/services/: celestial_fetch.py  dscan_ingest.py  dscan_parser.py  geography.py  sov.py  structure_logic.py
aa_core_hub/templates/aa_core_hub/: dashboard.html  dscan.html  structures.html
aa_core_hub/views/: dashboard.py  dscan.py  structures.py
management/commands/: fetch_celestials.py
migrations/: 0001_initial.py  0003_rename_aa_core_hu_type_n_idx_aa_core_hub_type_na_72d917_idx_and_more.py
models/: __init__.py  dscan.py  structures.py  timers.py
services/: dscan_parser.py  structure_logic.py
static/aa_core_hub/css/: core_hub.css
templates/aa_core_hub/: dashboard.html  dscan.html  structures.html
tests/: test_api.py  test_dscan_ingest.py  test_dscan_parser.py  test_geography.py  test_sov.py  test_war_timers.py
